--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,13 @@ body, html, *{
 .body__splash{
     width:100%;
 }
-.body__contact{
-    text-align: center;
-    font-family:Arial, Helvetica, sans-serif;
-    padding:25px;
+
+.body__house{
+    width:100%;
+    max-width:400px;
+    margin-top:0;
 }
-.contact__info a{
-    color:white;
-    text-decoration: none;
-    font-size:32pt;
-}
+
 .body__footer{
     text-align:center;
     padding-bottom:5%;
@@ -29,7 +26,7 @@ body, html, *{
 
 .pull-left, .pull-right{
     width: 100%;
-    max-width: 150px;
+    max-width: 250px;
     position:absolute;
 	margin-bottom:1%;
    
@@ -49,16 +46,4 @@ body, html, *{
         position:relative;
         margin-top:auto;
     }
-	.contact__info a{
-		font-size:large;
-	}
-}
-
-h1{
-    text-align:center;
-    color:white;
-    padding:0;
-    margin:0;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:32pt;
 }
