--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ body, html, *{
     width:100%;
     max-width:64px;
 }
+.body__footer img:hover{
+	border:3px solid gray;
+}
 
 .pull-left, .pull-right{
     width: 100%;
@@ -34,16 +37,25 @@ body, html, *{
 .pull-right{
     right:10px;
 }
-#logo{
+#visit{
 	margin-top:-4%;
+	color:white;
+	
 }
+
 .pull-left{
     left:10px;
 }
 
+
 @media screen and (max-width:768px){
     .pull-left, .pull-right{
+		padding-top:30px;
         position:relative;
         margin-top:auto;
     }
+	.body__house{
+		 width:60%;
+    max-width:400px;
+	}
 }
