--- a/style/snippets/Application/Application.css
+++ b/style/snippets/Application/Application.css
@@ -28,7 +28,10 @@ wp-application {
 
 wp-header.stickyHeader {
   top: 0;
-  position: sticky; }
+  position: sticky; 
+  position: -webkit-sticky; 
+
+}
 
 wp-dialogue.dialogue1 {
   position: fixed;
