--- a/style/snippets/TextSection/TextSection.css
+++ b/style/snippets/TextSection/TextSection.css
@@ -10,6 +10,7 @@ wp-text-section {
     font-size: 2rem;
     box-sizing: border-box;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     z-index: 1; }
   wp-text-section.h1 {
